--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,61 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <!--[if IE]>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <![endif]-->
+
+        <title>Free Responsive Admin Theme - ZONTAL</title>
+        <!-- BOOTSTRAP CORE STYLE  -->
+        <link href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet" />
+        <!-- FONT AWESOME ICONS  -->
+        <link href="{{ asset('assets/css/font-awesome.css') }}" rel="stylesheet" />
+        <!-- CUSTOM STYLE  -->
+        <link href="{{ asset('assets/css/style.css') }}" rel="stylesheet" />
+        <!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
+        <title>{% block title %}WLT{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <strong>Email: </strong>info@yourdomain.com
+                        &nbsp;&nbsp;
+                        <strong>Support: </strong>+90-897-678-44
+                    </div>
+
+                </div>
+            </div>
+        </header>
         {% block body %}{% endblock %}
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        &copy; 2015 YourCompany | By : <a href="http://www.designbootstrap.com/" target="_blank">DesignBootstrap</a>
+                    </div>
+
+                </div>
+            </div>
+        </footer>
+
+        <script src="{{ asset('assets/js/jquery-1.11.1.js') }}"></script>
+        <script src="{{ asset('assets/js/bootstrap.js') }}"></script>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
